iter27: добавлено свагер описание
